--- a/wm_SDR/wm_radar1.ipynb
+++ b/wm_SDR/wm_radar1.ipynb
@@ -41,7 +41,8 @@
     "* 噪声\n",
     " * 高斯白噪声\n",
     "* 有源欺骗干扰\n",
-    "\n",
+    " * 间歇采样转发干扰\n",
+    " \n",
     "#### 5.雷达方程\n",
     "$P_r=\\frac{P_tG_tG_rc^2\\sigma}{(4\\pi)^3R^4f^2L}$\n",
     "\n",
@@ -135,10 +136,10 @@
     "\n",
     "##### 噪声产生\n",
     "\n",
-    "G_amp = 0.1  # 高斯白噪声幅度\n",
-    "G_var = 1  # 高斯白噪声方差\n",
+    "SNR = 1e-1 #信噪比\n",
+    "G_var = 1/SNR  # 高斯白噪声方差\n",
     "\n",
-    "G_noise = G_amp*stats.norm.rvs(loc=0, scale=G_var, size=int(fs/prf))\n",
+    "G_noise = stats.norm.rvs(loc=0, scale=G_var, size=int(fs/prf))\n",
     "\n",
     "##### 生成波形\n",
     "\n",
@@ -183,6 +184,29 @@
     "plt.title('time waveform of signal_IF')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 间歇采样转发干扰\n",
+    "* 间歇采样信号是一个矩形脉冲串p(t):\n",
+    "\n",
+    "$p(t)=rect(\\frac{t}{\\tau})*\\sum_{-\\infty}^{+\\infty}\\delta(t-nT_s)$\n",
+    "\n",
+    "*$\\tau$为脉宽，$T_s$为采样周期，$T_s$远小于雷达脉冲宽度，$\\frac{1}{T_s}$大于雷达脉冲带宽时产生干扰效果*\n",
+    "\n",
+    "* 设雷达发射信号为x(t),其时宽为T,带宽为B,频谱为X(f).⼲扰机收到雷达信号后,对其进⾏间歇采样处理,即以p(t)与其做相乘运算,得采样信号为：\n",
+    "\n",
+    "$x_s(t)=p(t)x(t)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
